tests/sumo/errors/routes/false_route2/errors.sumo
Error: Attribute 'route' in definition of vehicle '0' is empty.
Error: Vehicle '0' has no route.
Quitting (on error).
